# ai-agent

./: .env.template  .gitignore  README.md  agent_instructions.py  agent_utils.py  app.py  app_mcp.py  chat_app.py  chat_utils.py  cleanup_utils.py  data_utils.py  diagrams.md  google_sheets_mcp.py  pyproject.toml  requirements-mcp.txt  requirements.txt  sheets_utils.py  startup.sh  streamlit_styles.py  user_functions.py  user_logic_apps.py  utils.py
.github/workflows/: main_dinner-generator.yml  staging_dinner-generator-staging.yml  staging_dinner-generator.yml
