[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "attrs==25.3.0",
    "azure-ai-agents==1.1.0",
    "azure-ai-projects==1.0.0",
    "azure-common==1.1.28",
    "azure-core==1.35.1",
    "azure-identity==1.25.0",
    "azure-keyvault-secrets==4.10.0",
    "azure-mgmt-core==1.6.0",
    "azure-mgmt-logic==10.0.0",
    "azure-storage-blob==12.26.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cryptography==46.0.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "gspread==6.2.1",
    "httplib2==0.31.0",
    "idna==3.10",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.2",
    "msal==1.33.0",
    "msal-extensions==1.3.1",
    "msrest==0.7.1",
    "narwhals==2.5.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "protobuf==6.32.1",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydeck==0.9.1",
    "pyjwt==2.10.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.49.1",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
]
